[gd_scene load_steps=3 format=3 uid="uid://b7121xr6afawg"]

[ext_resource type="Script" path="res://HUD.gd" id="1_p7ll8"]
[ext_resource type="FontFile" uid="uid://cr0ub2ghepcgv" path="res://fonts/xolonium-regular.ttf" id="1_wofb1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_p7ll8")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_right = 360.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_wofb1")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = 22.0
offset_right = 360.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_wofb1")
theme_override_font_sizes/font_size = 60
text = "Dodge The Monsters"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -381.0
offset_right = 160.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_wofb1")
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
